# PanoramaPTZ

./: BusquedaSeccionBonita.m  ColorSSIM.m  Competitors_media.m  DemoPTZ_RandomEnsemble_NG.m  EstadisticasPTZJoinModels_RandomEnsemble_NG.m  EstadisticasPTZJoinModels_RandomEnsemble_NG_AuxScen9.m  GenerateGT.m  InitialTrainPTZ_RandomEnsemble_NG.m  README.md  RestorationQuality.m  TablaEstadisticasPTZ_RandomEnsemble_NG.m  TestPTZJoinModels_RandomEnsemble_NG.m  TestPTZ_RandomEnsemble_NG.m  UpdateTrainPTZ_RandomEnsemble_NG.m
QuadTree/: Mi_test_Quadtree.m  README.txt  compile_quadtree_code.m  mexQuadtree_CPP.mexw64  run_unit_tests.m  test_Quadtree.m
QuadTree/@mexQuadtree/: Get_Tree_Data.m  Update_Tree.m  kNN_Search.m  mexQuadtree.m
QuadTree/Unit_Test/: test_Quadtree_Moving_Points.m  test_Quadtree_Random_Points.m
QuadTree/src_code_quadtree/: mexQuadtree.cpp  quadtree.cc
virtualptz/: CMakeCache.txt  CMakeLists.txt  LICENSE.txt  Makefile  README.txt  cmake_install.cmake
virtualptz/cmake/: FrameworkUtils.cmake
virtualptz/execs/: CMakeLists.txt  Makefile  cmake_install.cmake
virtualptz/execs/vptz_anomalousdetection/: CMakeLists.txt~  Makefile  cmake_install.cmake
virtualptz/execs/vptz_anomalousdetection/src/: main.cpp
virtualptz/execs/vptz_backgroundModelling/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
virtualptz/execs/vptz_backgroundModelling/src/: main.cpp
virtualptz/execs/vptz_camshift/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
virtualptz/execs/vptz_camshift/src/: main.cpp  main.cpp~
virtualptz/execs/vptz_gtviewer/: CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
virtualptz/execs/vptz_gtviewer/src/: main.cpp  main.cpp_dev  main.cpp~
virtualptz/modules/: Makefile  cmake_install.cmake
virtualptz/modules/vptz/: CMakeLists.txt  Makefile  cmake_install.cmake
virtualptz/modules/vptz/include/litiv/vptz/: StandaloneUtils.hpp  StandaloneUtils.hpp.in  virtualptz.hpp
virtualptz/modules/vptz/src/: virtualptz.cpp
